--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,6 +73,6 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-# set -g status-bg default
-# set -g status-style bg=default
+set -g status-bg default
+set -g status-style bg=default
 
