Change tmux leader key to CTRL-a

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,7 +15,7 @@ set-option -g allow-rename off
 unbind r
 bind r source-file ~/.tmux.conf
 
-set -g prefix C-Space
+set -g prefix C-a
 
 set -g mouse on
 
