Update starship prompt to be more catppuccin style

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,40 +1,39 @@
 # Use custom format
 format = """
-[╭─](white)$username$hostname in $directory$git_branch$battery
-[╰─](white)$character """
+[╭─](surface2)$os$username$hostname$directory$git_branch$battery
+[╰─](surface2)$character """
 
 palette = "catppuccin_mocha"
 # add_newline = false
+
+[character] 
+success_symbol = "[❯](peach)"
+error_symbol = "[❯](red)"
+vimcmd_symbol = "[❮](green)"
 
 # Username settings
 [username]
 show_always = true
 style_root = "bold red"
-style_user = "bold yellow"
+style_user = "bold flamingo"
 format = "[$user]($style) "
 disabled = false
 
 # Hostname settings
 [hostname]
 ssh_only = false
-format =  "on [$hostname](bold red)"
+format =  "[on](text) [$hostname](bold maroon) "
 trim_at = ".companyname.com"
 disabled = false
 ssh_symbol = " "
 
 [directory]
 read_only = " 󰌾"
-truncation_length = 8
+truncation_length = 4
 truncation_symbol = "…/"
-style = "bold pink"
-format = "[$read_only]($read_only_style)[$path]($style) "
+style = "bold blue"
+format = "[in](text) [$read_only]($read_only_style)[$path]($style) "
 disabled = false
-
-[directory.substitutions]
-"Documents" = "󰈙 "
-"Downloads" = " "
-"Music" = " "
-"Pictures" = " "
 
 # cmd_duration config
 [cmd_duration]
@@ -45,77 +44,61 @@ format = "took [$duration]($style)"
 [git_branch]
 symbol = " "
 style = "bold mauve"
+format = '[at](text) [$symbol$branch]($style)'
 truncation_length = 17
 truncation_symbol = ""
 
-[aws]
-symbol = "  "
+[os]
+format = '[$symbol](bold rosewater)'   
+disabled = false
 
-[buf]
-symbol = " "
+[palettes.catppuccin_mocha]
+rosewater = "#f5e0dc"
+flamingo = "#f2cdcd"
+pink = "#f5c2e7"
+mauve = "#cba6f7"
+red = "#f38ba8"
+maroon = "#eba0ac"
+peach = "#fab387"
+yellow = "#f9e2af"
+green = "#a6e3a1"
+teal = "#94e2d5"
+sky = "#89dceb"
+sapphire = "#74c7ec"
+blue = "#89b4fa"
+lavender = "#b4befe"
+text = "#cdd6f4"
+subtext1 = "#bac2de"
+subtext0 = "#a6adc8"
+overlay2 = "#9399b2"
+overlay1 = "#7f849c"
+overlay0 = "#6c7086"
+surface2 = "#585b70"
+surface1 = "#45475a"
+surface0 = "#313244"
+base = "#1e1e2e"
+mantle = "#181825"
+crust = "#11111b"
 
-[c]
-symbol = " "
+[battery]
+full_symbol = " "
+charging_symbol = " "
+discharging_symbol = " "
+format = "[$symbol$percentage]($style)"
+style = "yellow bold"
+disabled = false
 
-[conda]
-symbol = " "
-
-[crystal]
-symbol = " "
-
-[dart]
-symbol = " "
-
-[docker_context]
-symbol = " "
-
-[elixir]
-symbol = " "
-
-[elm]
-symbol = " "
-
-[fennel]
-symbol = " "
-
-[fossil_branch]
-symbol = " "
-
-[golang]
-symbol = " "
-
-[guix_shell]
-symbol = " "
-
-[haskell]
-symbol = " "
-
-[haxe]
-symbol = " "
-
-[hg_branch]
-symbol = " "
-
-[java]
-symbol = " "
-
-[julia]
-symbol = " "
-
-[kotlin]
-symbol = " "
+[directory.substitutions]
+"Documents" = "󰈙 "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
 
 [lua]
 symbol = " "
 
 [memory_usage]
 symbol = "󰍛 "
-
-[meson]
-symbol = "󰔷 "
-
-[nim]
-symbol = "󰆥 "
 
 [nix_shell]
 symbol = " "
@@ -204,30 +187,65 @@ symbol = " "
 [zig]
 symbol = " "
 
-[palettes.catppuccin_mocha]
-rosewater = "#f5e0dc"
-flamingo = "#f2cdcd"
-pink = "#f5c2e7"
-mauve = "#cba6f7"
-red = "#f38ba8"
-maroon = "#eba0ac"
-peach = "#fab387"
-yellow = "#f9e2af"
-green = "#a6e3a1"
-teal = "#94e2d5"
-sky = "#89dceb"
-sapphire = "#74c7ec"
-blue = "#89b4fa"
-lavender = "#b4befe"
-text = "#cdd6f4"
-subtext1 = "#bac2de"
-subtext0 = "#a6adc8"
-overlay2 = "#9399b2"
-overlay1 = "#7f849c"
-overlay0 = "#6c7086"
-surface2 = "#585b70"
-surface1 = "#45475a"
-surface0 = "#313244"
-base = "#1e1e2e"
-mantle = "#181825"
-crust = "#11111b"
+[aws]
+symbol = "  "
+
+[buf]
+symbol = " "
+
+[c]
+symbol = " "
+
+[conda]
+symbol = " "
+
+[crystal]
+symbol = " "
+
+[dart]
+symbol = " "
+
+[docker_context]
+symbol = " "
+
+[elixir]
+symbol = " "
+
+[elm]
+symbol = " "
+
+[fennel]
+symbol = " "
+
+[fossil_branch]
+symbol = " "
+
+[golang]
+symbol = " "
+
+[guix_shell]
+symbol = " "
+
+[haskell]
+symbol = " "
+
+[haxe]
+symbol = " "
+
+[hg_branch]
+symbol = " "
+
+[java]
+symbol = " "
+
+[julia]
+symbol = " "
+
+[kotlin]
+symbol = " "
+
+[meson]
+symbol = "󰔷 "
+
+[nim]
+symbol = "󰆥 "
