--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -49,7 +49,7 @@ truncation_length = 17
 truncation_symbol = ""
 
 [os]
-format = '[$symbol](bold rosewater)'   
+format = '[$symbol](bold overlay1)'   
 disabled = false
 
 [palettes.catppuccin_mocha]
