--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,7 +1,7 @@
 # Use custom format
 format = """
 [╭─](surface2)$os$username$hostname$directory$git_branch$battery
-[╰─](surface2)$character """
+[╰─](surface2)$character"""
 
 palette = "catppuccin_mocha"
 # add_newline = false
@@ -49,7 +49,7 @@ truncation_length = 17
 truncation_symbol = ""
 
 [os]
-format = '[$symbol](bold overlay1)'   
+format = '[$symbol](bold subtext0)'   
 disabled = false
 
 [palettes.catppuccin_mocha]
