--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,71 +1,106 @@
 set-option -g default-shell /bin/zsh
 
 # fixes lag when pressing esc
+set -g status-interval 1
 set -s escape-time 0
+set -g repeat-time 500
+set -g display-time 1500
 
-set -g base-index 1
-setw -g pane-base-index 1
-
+# Terminal colors
 set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -sag terminal-features ",*:RGB"
+set -sag terminal-features ",*:usstyle"
+
+set -g mouse on
 
 # don't rename windows automatically
 set-option -g allow-rename off
 
+# Make index start from 1
+set -g base-index 1
+setw -g pane-base-index 1
+
 unbind r
 bind r source-file ~/.tmux.conf
 
-set -g prefix C-a
+# Change prefix key
+unbind c-b
+set-option -g prefix C-a
+bind C-a send-prefix
 
-set -g mouse on
-
-set-window-option -g mode-keys vi
-
+# Vim style pane selection
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-set-option -g status-position top
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux#v1.0.2'
+set -g @plugin 'catppuccin/tmux'
 
-# Config
-set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
+# Configure Catppuccin
+set -g @catppuccin_flavor "mocha" # latte, frappe, macchiato or mocha
+set -g @catppuccin_status_background "none" # none == default
+set -g @catppuccin_pane_status_enabled "off"
+set -g @catppuccin_pane_border_status "off"
 
-# set -g @catppuccin_window_status_style "basic"
-set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_window_number_position "right"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W "
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W "
-
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-# set -g @catppuccin_status_left_separator "█"
-# set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
+# status left look and feel
+set -g status-left-length 80
 set -g status-left ""
-set -g  status-right "#{E:@catppuccin_status_directory}"
-# set -ag  status-right "#{E:@catppuccin_status_application}"
-# set -ag status-right "#{E:@catppuccin_status_user}"
-# set -ag status-right "#{E:@catppuccin_status_host}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
-# set -ag status-right "#{E:@catppuccin_status_date_time}"
 
-set -g @catppuccin_window_current_background "#{@thm_peach}"
-set -g @catppuccin_status_background "default"
+# status right look and feel
+set -g status-right-length 160
+set -g status-right ""
+
+# custom var
+set -g @custom_separator "#[fg=#{@thm_overlay_0},none]|"
+
+# window zoom flag
+set -ga status-right "#{?window_zoomed_flag,"
+set -ga status-right "#[fg=#{@thm_yellow}]#[bg=default]"
+set -ga status-right " #{?#{e|>:#{window_width},110}, zoom,} "
+set -ga status-right "#{E:#{@custom_separator}}"
+set -ga status-right ",}"
+
+# session
+set -ga status-right "#[fg=#{@thm_green},bg=default]"
+set -ga status-right "#{?client_prefix,#[#{fg=#{@thm_green}}]#[reverse]#[bold],}"
+set -ga status-right " #{?#{e|>:#{window_width},90}, #S,} "
+set -ga status-right "#{?client_prefix,#[none],}"
+set -ga status-right "#{E:#{@custom_separator}}"
+
+# application
+set -ga status-right "#[fg=#{@thm_maroon},bg=default]"
+set -ga status-right " #{?#{e|>:#{window_width},80}, #{pane_current_command},} "
+set -ga status-right "#{E:#{@custom_separator}}"
+
+# directory
+set -ga status-right "#[fg=#{@thm_blue},bg=default]"
+set -ga status-right " #{?#{e|>:#{window_width},80}, #{=/24/...:#{b:pane_current_path}},} "
+# set -ga status-right "#{Ej#{@custom_separator}}"
+
+# pane marked flag
+set -ga status-right "#{?pane_marked,"
+set -ga status-right "#[fg=#{@thm_yellow}]#[bg=default]"
+set -ga status-right " #{?#{e|>:#{window_width},110}, marked,} "
+set -ga status-right "#{E:#{@custom_separator}}"
+set -ga status-right ",}"
+
 
 # bootstrap tpm
 if "test ! -d ~/.tmux/plugins/tpm" \
@@ -73,6 +108,43 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-set -g status-bg default
-set -g status-style bg=default
 
+# Configure Tmux
+set -g status 2
+set -g status-position top
+set -g status-style "bg=#{@thm_mantle}"
+set -g status-justify "left"
+
+# set -gF status-format[1] "#[fg=#{@thm_surface_2},bg=#{@thm_bg}]\
+# ───────────────────────────────────────────────────────────────────────────────\
+# ───────────────────────────────────────────────────────────────────────────────\
+# ───────────────────────────────────────────────────────────────────────────────\
+# ───────────────────────────────────────────────────────────────────────────────\
+# ───────────────────────────────────────────────────────────────────────────────\
+# ───────────────────────────────────────────────────────────────────────────────\
+# "
+
+# pane border look and feel
+setw -g pane-border-status off
+setw -g pane-border-format ""
+setw -g pane-active-border-style "bg=default,fg=#{@thm_peach}"
+setw -g pane-border-style "bg=default,fg=#{@thm_overlay_1}"
+setw -g pane-border-lines single
+
+# window look and feel
+set -gF window-status-separator "#[fg=#{@thm_overlay_0}]"
+set -wg automatic-rename on
+set -g automatic-rename-format "window"
+
+set -g window-status-format " #{?#{==:#{window_name},window},#I,#W} "
+set -g window-status-style "fg=#{@thm_rosewater},bg=default"
+set -g window-status-last-style "fg=#{@thm_peach}"
+set -g window-status-activity-style "fg=#{@thm_red},bold"
+set -g window-status-bell-style "fg=#{@thm_red},bold"
+
+set -g window-status-current-format " #{?#{==:#{window_name},window},#I,#W} "
+set -g window-status-current-style "fg=#{@thm_peach},bold,reverse"
+
+# show startup screen
+# hook to run fastfetch on session creation
+set-hook -g after-new-session 'send-keys " clear && fastfetch" C-m'
