Fix tmux header line

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -115,14 +115,14 @@ set -g status-position top
 set -g status-style "bg=#{@thm_mantle}"
 set -g status-justify "left"
 
-# set -gF status-format[1] "#[fg=#{@thm_surface_2},bg=#{@thm_bg}]\
-# ───────────────────────────────────────────────────────────────────────────────\
-# ───────────────────────────────────────────────────────────────────────────────\
-# ───────────────────────────────────────────────────────────────────────────────\
-# ───────────────────────────────────────────────────────────────────────────────\
-# ───────────────────────────────────────────────────────────────────────────────\
-# ───────────────────────────────────────────────────────────────────────────────\
-# "
+set -gF status-format[1] "#[fg=#{@thm_surface_2},bg=#{@thm_bg}]\
+───────────────────────────────────────────────────────────────────────────────\
+───────────────────────────────────────────────────────────────────────────────\
+───────────────────────────────────────────────────────────────────────────────\
+───────────────────────────────────────────────────────────────────────────────\
+───────────────────────────────────────────────────────────────────────────────\
+───────────────────────────────────────────────────────────────────────────────\
+"
 
 # pane border look and feel
 setw -g pane-border-status off
